# school

./: .gitignore
CMSC435/proj1/: Makefile  README  draw.c  draw.h  proj1.c
CMSC435/proj2/: Draw.cpp  Draw.h  Globals.h  Makefile  Point.cpp  Point.h  Proj2.cpp  README  Triangle.cpp  Triangle.h  draw.c  draw.h  proj2.c  view.h
CMSC435/proj3/: Draw.cpp  Draw.h  Globals.h  Makefile  Point.cpp  Point.h  README  Triangle.cpp  Triangle.h  draw.c  draw.h  motion.c  motion.h  proj3.c  view.c
CMSC435/proj4/: README  balls.ppm  build.xml  gears.ppm  mount.ppm  teapot.nff  teapot.ppm  tetra.ppm
CMSC435/proj5/: README  balls.nff  balls.ppm  gears.nff  gears.ppm  mount.nff  mount.ppm  teapot.nff  teapot.ppm  tetra.nff  tetra.ppm
CMSC435/proj6/: Makefile  README  draw.c  proj1.c  proj6.c  tile.sl
CMSC444/chaum-mix/: chaum-mix.tex  chaum-mix.tex.bak
CMSC444/csee-unix/: csee-unix.tex
CMSC444/evaluation/: evaluation.tex  evaluation.tex.bak
CMSC444/final-presentation/: Makefile  final-presentation.bib  final-presentation.tex
CMSC444/progress/: Makefile  progress.bib  progress.tex  unsrturl.bst
CMSC444/proposal/: proposal.tex  proposal.tex.bak
CMSC444/report/: architecture.odg  handshake.odg  (+1 more)
Proj1/: Makefile.am  autogen.sh  configure.ac
Proj1/http/: Makefile.am  base64.h  http.c  http.h  timeval.h
Proj1/list/: Makefile.am  list.c  list.h  test.c
Proj1/log/: Makefile.am  log.c  log.h  test.c
Proj1/ui/: Makefile.am  http_run.c  http_run.h  ui.c  ui.h
Proj1/uri/: Makefile.am  http_url.c  http_url.h  server_authority.c  server_authority.h  test.c  uri.c  uri.h
(+263 files in other folders)
